test_suite5/ALAN/test_suite/alan-2022-examples/failing/001300_mutation.alan
source y begin call U() begin end
